<resources>
    <string name="app_name">EyeCare</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Toggle Alerts</string>
    <string name="perf_Onboot">Turning on will send you alerts every period that you have specified</string>

    <string name="pref_title_display_name">Your name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
    <!--<string-array name="pref_example_list_titles">-->
    <!--<item>Always</item>-->
    <!--<item>When possible</item>-->
    <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_example_list_values">-->
    <!--<item>1</item>-->
    <!--<item>0</item>-->
    <!--<item>-1</item>-->
    <!--</string-array>-->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Remind Time</string>
    <string-array name="pref_sync_frequency_titles">
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>60</item>

    </string-array>

    <!--<string name="pref_title_system_sync_settings">System sync settings</string>-->

    <!--&lt;!&ndash; Example settings for Notifications &ndash;&gt;-->
    <!--<string name="pref_header_notifications">Notifications</string>-->

    <!--<string name="pref_title_new_message_notifications">New message notifications</string>-->

    <!--<string name="pref_title_ringtone">Ringtone</string>-->
    <!--<string name="pref_ringtone_silent">Silent</string>-->

    <!--<string name="pref_title_vibrate">Vibrate</string>-->

    <string name="scoreView">Score</string>
    <string name="medalView">Medal</string>
    <string name="scoreValue">40</string>
    <string name="look_away_from_screen">Look Away from Screen or
    Press Power button</string>

    <string name="title_activity_count">Count</string>
    <string name="dummy_content">20</string>
    <string name="great_job">Great Job </string>
    <string name="continueButton">Continue</string>
    <string name="turn_on">Turn On</string>
    <string name="slide1">These days we use smartphones for a prolonged period</string>
    <string name="ExcessiveUse">Excessive use of Smart phones</string>
    <string name="solutionforyou">Don\'t worry! EyeCare has a solution for you!</string>
    <string name="leads_to_eye_strain_and_neck_pain">Leads to Eye Strain and Neck pain</string>
    <string name="after_every_20_minutes_of_screen_use">After Every 20 minutes of Screen use</string>
    <string name="eyecare_will_display_to_alert_if_you_have_use_this_device_for_more_20_minutes">EyeCare will display an alert if you use this device for more than 20 minutes</string>
    <string name="to_take_a_break_from_smartphone_click_on_yes">To take a Break From smartphone click on eye Icon</string>
    <string name="look_at_far_object_which_20_feets_away">Look at an object that is at least 20 feet away</string>
    <string name="count_down">EyeCare will display a 20 second countdown</string>





    <string name="notification_content_text">is running in background</string>
    <string name="Toasttext1">You have used device for</string>
    <string name="Toasttext2">minutes now , time for break click on eye Icon</string>
    <string name="score">Score</string>
    <string name="share_your_score">Share your Score</string>


</resources>
