<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DE4C2E"
    android:padding="30dp"
    android:baselineAligned="false"

>


    <ImageView
        android:id="@+id/trophyImage"
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:src="@drawable/ic_drawing"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/RewardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_weight="4"
        android:text="@string/great_job"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/scenery"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/ic_stars_black_24dp" />

        <TextView
            android:id="@+id/ScoreView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/score"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical|fill_horizontal"
            android:padding="5dp"
            android:text="TextView"
            android:textColor="@color/about_libraries_card"
            android:textSize="40sp" />

    </LinearLayout>

    <Button
        android:id="@+id/share"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="5sp"
        android:layout_weight="1"

        android:background="@drawable/button"
        android:drawableLeft="@android:drawable/ic_menu_share"

        android:elevation="24dp"
        android:paddingLeft="10sp"
        android:text="@string/share_your_score" />


    <Button
        android:id="@+id/ContinueButton"
        android:elevation="24dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"

        android:layout_weight="1"
        android:background="@drawable/button"
        android:text="@string/continueButton" />

    </LinearLayout>





