<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8CF13"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Great job"
        android:id="@+id/RewadTextView"
        android:layout_weight="1"
        android:textColor="#dfe0e2"
        android:textSize="60sp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16sp"
        android:longClickable="false"
        android:linksClickable="false"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/trophy"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:cropToPadding="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:paddingTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreView"
            android:id="@+id/textView4"
            android:layout_weight="2"
            android:textSize="40dp"
            android:layout_marginLeft="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreValue"
            android:id="@+id/ScoreValue"
            android:layout_weight="3"
            android:textSize="40dp"
            android:layout_marginLeft="16dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continueButton"
        android:id="@+id/ContinueButton"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="#FF5722"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />


</LinearLayout>